// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when no src url - human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <svg
      aria-hidden="true"
      class="octicon octicon-feed-person"
      data-component="Octicon"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
      />
    </svg>
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when no src url - non human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <svg
      aria-hidden="true"
      class="octicon octicon-feed-person"
      data-component="Octicon"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
      />
    </svg>
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when the image fails to load (isBroken = true) - human user 1`] = `
<div
  class="prc-Stack-Stack-UQ9k6"
  data-align="center"
  data-direction="horizontal"
  data-gap="condensed"
  data-justify="start"
  data-padding="none"
  data-testid="avatar"
  data-wrap="nowrap"
>
  <svg
    aria-hidden="true"
    class="octicon octicon-feed-person"
    data-component="Octicon"
    display="inline-block"
    fill="currentColor"
    focusable="false"
    height="16"
    overflow="visible"
    style="vertical-align: text-bottom;"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
    />
  </svg>
  <div
    class="prc-Truncate-Truncate-2G1eo"
    data-inline="true"
    style="--truncate-max-width: 280px;"
    title="@gitify-app"
  >
    @gitify-app
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when the image fails to load (isBroken = true) - non human user 1`] = `
<div
  class="prc-Stack-Stack-UQ9k6"
  data-align="center"
  data-direction="horizontal"
  data-gap="condensed"
  data-justify="start"
  data-padding="none"
  data-testid="avatar"
  data-wrap="nowrap"
>
  <svg
    aria-hidden="true"
    class="octicon octicon-feed-person"
    data-component="Octicon"
    display="inline-block"
    fill="currentColor"
    focusable="false"
    height="16"
    overflow="visible"
    style="vertical-align: text-bottom;"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
    />
  </svg>
  <div
    class="prc-Truncate-Truncate-2G1eo"
    data-inline="true"
    style="--truncate-max-width: 280px;"
    title="@gitify-app"
  >
    @gitify-app
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > should render avatar - human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <img
      alt="gitify-app"
      class="prc-Avatar-Avatar-0xaUi"
      data-component="Avatar"
      height="16"
      src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
      style="--avatarSize-regular: 16px;"
      width="16"
    />
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > should render avatar - non-human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <img
      alt="gitify-app"
      class="prc-Avatar-Avatar-0xaUi"
      data-component="Avatar"
      data-square=""
      height="16"
      src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
      style="--avatarSize-regular: 16px;"
      width="16"
    />
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;
